# streamlit_notifications_demo

./: .env.example  .env.sample  .gitignore  Claude.md  README.md  api.py  app.py  config_nginx.sh  env_to_streamlit_secrets.py  nginx.conf  pyproject.toml  railway.toml  start_servers.sh  stop_servers.sh
pages/: 1_settings.py  2_history.py
static/: firebase-messaging-sw.js  streamlit_wrapper.html  test.html
